# tapo-p110m-toggle

./: README.md  p110-toggle.py  pyproject.toml
tapo_p110_toggle/: main.py
