[project]
name = "tapo-p110-toggle"
version = "0.1.0"
description = ""
authors = [
    {name = "cam8001",email = "139489+cam8001@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tapo (>=0.8.1,<0.9.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
